2018-04-14  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Fix issue GitHub:texjporg/tex-jp-build#57
	  that discontinuous KINSOKU/INHIBIT table cannot be
	  searched properly.
	  (regression caused by a commmit of 2017-09-11)
	* tests/free_pena.tex, tests/free_ixsp.tex: Added.
	* ptex_version.h: pTeX version p3.8.1.

2018-02-05  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptex-base.ch: Set subtype for JFM glue in math list.

2018-02-02  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ppltotf.ch: Fix issues GitHub:texjporg/tex-jp-build#47, #48
	 - Support SKIP property in GLUEKERN table.
	 - Improve hex charcode parsing.
	* ptftopl.ch: Fix issue GitHub:texjporg/tex-jp-build#48
	 - Print ASCII characters always in hex charcode (for upTFtoPL).
	* ptex-base.ch: Fix issue GitHub:texjporg/tex-jp-build#47
	 - Support SKIP property in GLUEKERN table.
	 - Support huge GLUEKERN table with rearrangement.
	* am/ptex.am: Add new tests.
	* skipjfm.test, tests/skipjfm.{tex,pl,tfm}: New test files.

2018-01-31  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: Fix issue GitHub:texjporg/tex-jp-build#40
	 - Insert a disp_node before the first character in a
	   paragraph or an hbox, if disp_node is not inserted yet
	   in the current list (in case it is unboxed).
	 - Inhibit JFM glue after a disp_node at the very beginning of
	   a paragraph or an hbox.
	* tests/disp_jfm.tex, tests/disp_unbox.tex: Added.

2018-01-27  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ppltotf.ch, ptftopl.ch: Introduce a new JFM spec, to allow
	3-byte characters in TYPE > 0 for upTeX. The new spec is
	effectively upper compatible with the original one.
	* ptex-base.ch, pdvitype.ch: Adapt to the new JFM spec.

2018-01-21  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptex-base.ch: New primitives: \ptexversion, \ptexminorversion
	and \ptexrevision.
	* ptex_version.h: pTeX version p3.8.0.
