@@ -4,6 +4,7 @@
  */
 
 #include "kanji.h"
+#define CS_TOKEN_FLAG   0xFFFF
 
 #if !defined(WIN32)
 int sjisterminal;
@@ -12,7 +13,8 @@ int sjisterminal;
 /* TOKEN */
 boolean check_kanji(integer c)
 {
-    return is_char_kanji(c);
+    if (c >= CS_TOKEN_FLAG) return false;
+    else return is_char_kanji(c);
 }
 
 boolean is_char_ascii(integer c)
